Refactor index.html structure and styles

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ footer {
 
             <section class="hobbies">
                 <h2>Hobbies</h2>
-                <p> I'm a biggner in coding, I enjoy listening to anthem, reading Amharic bibble, and exploring new tech tools that help improve productivity and creativity. Playing football is my favorite sport. Watching movies and series is my favorite pastime. Going to mosque and praying is my spiritual activity. Helping others is my moral duty. Spending time with friends and family is important to me.</p>
+                <p> I'm a biggner in coding, I enjoy listening to anthem, reading Amharic bibble, and exploring new tech tools that help improve productivity and creativity. Playing football is my favorite sport. Watching movies and series is my favorite pastime. Going to Church and praying is my spiritual activity. Helping others is my moral duty. Spending time with friends and family is important to me.</p>
             </section>
 
             <section class="contact">
