--- a/index.html
+++ b/index.html
@@ -178,6 +178,8 @@ footer {
                     <li><a href="border.html">This is Border Color</a></li>
                      <li><a href="Table.html">Table Create</a></li>
                      <li><a href="Bootstrap.html">Bootstrap</a></li>
+                <li><a href="cookies.html">cookies</a></li>
+                      
                 
             </ul>
         </aside>
@@ -220,3 +222,4 @@ footer {
 
 </body>
 </html>
+
