--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@ footer {
                      <li><a href="Table.html">Table Create</a></li>
                      <li><a href="Bootstrap.html">Bootstrap</a></li>
                 <li><a href="cookies.html">cookies</a></li>
+                 <li><a href="practice 1.html">javascript practice</a></li>
                       
                 
             </ul>
@@ -222,4 +223,5 @@ footer {
 
 </body>
 </html>
+
 
