--- a/index.html
+++ b/index.html
@@ -179,7 +179,11 @@ footer {
                      <li><a href="Table.html">Table Create</a></li>
                      <li><a href="Bootstrap.html">Bootstrap</a></li>
                 <li><a href="cookies.html">cookies</a></li>
-                 <li><a href="practice 1.html">javascript practice</a></li>
+                 <li><a href="practice 1.html">javascript practice1</a></li>
+                  <li><a href="practice 2.html">javascript practice2</a></li>
+                  <li><a href="practice 3.html">javascript practice3</a></li>
+                  <li><a href="practice 4.html">javascript practice4</a></li>
+                  <li><a href="practice 5.html">javascript practice5</a></li>
                       
                 
             </ul>
@@ -223,5 +227,6 @@ footer {
 
 </body>
 </html>
+
 
 
